# TurnToPage

./: .gitignore  README.md  TurnToPage.spec  WORKING_PLAN.md  launch_gui.py  pyproject.toml
gamebooks_client/: __init__.py  api.py  catalog.py  cli.py  collection.py  crawler.py  gui.py  models.py  session.py
tests/: test_catalog.py  test_collection.py  test_parsing.py
tests/fixtures/: item_details.html  item_details_rich.html  search_results.html  series_details.html
tools/: make_logo_transparent.py
