[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turntopage"
version = "0.1.0"
description = "TurnToPage - A Gamebook Collectors Tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4==4.12.3",
  "requests==2.32.3",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.5",
]
images = [
  "Pillow>=10.0",
]

[project.scripts]
turntopage = "gamebooks_client.cli:main"
turntopage-gui = "gamebooks_client.gui:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gamebooks_client*"]
